# CursorGaze

./: .gitignore  README.md  cursor_gaze.py  pyproject.toml  requirements.txt
displayers/: dis_single_window.py  face_predictor.py
model_managers/: __init__.py  cursor_gaze_coreml.py  cursor_gaze_tflite.py  cursor_gaze_v1.py  cursor_gaze_v1_01.yaml
tf_models/: __init__.py
tf_models/cursor_gaze_v1/: __init__.py  gaze_warp_model.py  layers.py  spatial_transform.py
